デザインに合わせてサンプルページを修正
